Fix: Representatives wrap text;

--- a/themes/candme/stylesheets/sass/screen.sass
+++ b/themes/candme/stylesheets/sass/screen.sass
@@ -1244,12 +1244,13 @@ a.button-liked-it
   .entry
     overflow: hidden
     margin: 0 0 10px 0
+    padding-left: 66px
     p
       color: #666
       &.photo
         float: left
         width: 56px
-        margin: 0 10px 0 0
+        margin: 0 10px 0 -66px
         img
           display: block
           border: #bbb 1px solid
@@ -1266,6 +1267,7 @@ a.button-liked-it
           color: #666
       &.details
         font-size: 12px
+        line-height: 1.2
 
 .box-c-activities-list
   margin: 0 0 1em 0
@@ -1568,4 +1570,4 @@ ul.dashboard_actions
       text-align: center
       img
         margin: 0 0 10px 0
-
+p
